--- a/.github/workflows/build_monolithic.yml
+++ b/.github/workflows/build_monolithic.yml
@@ -21,7 +21,7 @@ env:
 
 jobs:
   moltenVK_DXVK:
-    runs-on:  macos-latest
+    runs-on:  self-hosted
     env:
       # crossover source code to be downloaded
       CROSS_OVER_SOURCE_URL: https://media.codeweavers.com/pub/crossover/source/crossover-sources-21.2.0.tar.gz
