--- a/.github/workflows/build_monolithic.yml
+++ b/.github/workflows/build_monolithic.yml
@@ -21,11 +21,11 @@ env:
 
 jobs:
   moltenVK_DXVK:
-    runs-on:  macos-latest
+    runs-on:  macos-13
     env:
       # crossover source code to be downloaded
-      CROSS_OVER_SOURCE_URL: https://media.codeweavers.com/pub/crossover/source/crossover-sources-21.2.0.tar.gz
-      CROSS_OVER_LOCAL_FILE: crossover-22.0.1
+      CROSS_OVER_SOURCE_URL: https://media.codeweavers.com/pub/crossover/source/crossover-sources-24.0.5.tar.gz
+      CROSS_OVER_LOCAL_FILE: crossover-24.0.5
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -77,8 +77,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        CROSS_OVER_VERSION: [22.0.1, 21.2.0, 20.0.4, 19.0.2] # 22.0.0, 21.1.0, 21.0.0, 20.0.2, 20.0.1, 20.0.0, 19.0.1, 19.0.0
-    runs-on:  macos-latest
+        CROSS_OVER_VERSION: [24.0.5] # 22.0.0, 21.1.0, 21.0.0, 20.0.2, 20.0.1, 20.0.0, 19.0.1, 19.0.0
+    runs-on:  macos-13
 
     env:
       # crossover source code to be downloaded
@@ -282,8 +282,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        CROSS_OVER_VERSION: [22.0.1] # 22.0.0, 21.2.0, 20.0.4, 19.0.2, 21.1.0, 21.0.0, 20.0.2, 20.0.1, 20.0.0
-    runs-on:  macos-latest
+        CROSS_OVER_VERSION: [24.0.5] # 22.0.0, 21.2.0, 20.0.4, 19.0.2, 21.1.0, 21.0.0, 20.0.2, 20.0.1, 20.0.0
+    runs-on:  macos-13
     needs: wine-crossover
 
     env:
